added create form with date picker

--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,21 @@ html, body {
 body {
     -ms-overflow-style: hidden;
     -webkit-app-region:drag;
+    background-color: #227542;
 }
 
 input[type="submit"],
 input[type="reset"],
 input[type="button"],
 input[type="text"],
+input[type="date"],
+input[type="password"],
+input[type="email"],
 button,
 .w3-sidenav a,
 #floatingIcon,
+#closeIcon,
+#newReminder,
 textarea {
 	-webkit-app-region: no-drag;
 }
@@ -24,7 +30,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .selected {
-	color:#fff!important;background-color:#2D9434 !important
+	color:#fff !important;
+	background-color:#2D9434 !important
 }
 
 .w3-sidenav a {
@@ -46,13 +53,17 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #container {
-	background-color: #fff !important;
+	background-color: #8BC34A !important;
 	height: 100%;
 	color: #000;
+}
+.w3-container.header {
+	height: 50px !important;
 }
 
 .spacer {
 	margin-top: 50px;
+	padding-left: 0px !important;
 }
 
 #floatingIcon {
@@ -62,7 +73,32 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #closeIcon {
-	top: 12px;
+	top: 10px;
     right: 12px;
     position: absolute;
+    cursor: pointer;
+}
+
+.content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin-left: 110%;
+}
+.content.inside {
+    margin-left: 0;
+}
+
+#newReminder{
+	background-color: #fff;
+	height: 100%;
+	width: 75%
+}
+
+.newContent {
+	margin-left: 0;
+	-webkit-transition: margin-left 1s;
+    -moz-transition: margin-left 1s;
+    -o-transition: margin-left 1s;
+    transition: margin-left 1s;
 }
