--- a/views/all_reminders.html
+++ b/views/all_reminders.html
@@ -1,2 +1,10 @@
 <h1>All Reminders</h1>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla fringilla pharetra fermentum. 
+<div class="tableContainer" id="allReminders">
+	<div class="list-group" id="allRemList" >
+	 <!--  <a href="#" class="list-group-item">
+	    <h4 class="list-group-item-heading">Name</h4>
+	    <p class="list-group-item-text">On 2016/09/17 21:00</p>
+	  </a>
+	  -->
+	</div>
+</div>
