--- a/views/category.html
+++ b/views/category.html
@@ -1,2 +1,23 @@
 <h1>Category</h1>
-			    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla fringilla pharetra fermentum.  
+			    
+<div class="tableContainer" id="allReminders">
+
+	<div class="list-group" id="allRemList" >
+		<a class="list-group-item itemToggle pointerCursor" data-toggle="collapse" data-target="#collapseExample0" aria-expanded="false" aria-controls="collapseExample">
+			<div>
+				<div class="category label label-success">
+					Entertainment
+				</div>
+				<h4 class="ist-group-item-heading itemHeader">One</h4>
+				<p class="list-group-item-text">10/15/2016 8:52 PM</p>
+				<span class="glyphicon glyphicon-bell alarmIcon" />
+			</div>
+			<div class="collapse" id="collapseExample0">
+				<div>This is a line</div>
+			</div>
+		</a>
+
+	</div>
+
+</div>
+
