--- a/views/upcoming.html
+++ b/views/upcoming.html
@@ -3,3 +3,15 @@
 		    Vestibulum neque erat, bibendum ac sagittis et, pulvinar at urna. Donec sit amet ipsum quis ve    height: 100%;
 lit cursus ultrices elementum id lacus.
 		    Sed vel massa vitae turpis viverra adipiscing at nec odio. Quisque ac ligula metus. Vestibulum suscipit elit eget lacus pellentesque tempus. Suspendisse potenti.    
+<br/>
+<a class="btn btn-primary" role="button" data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+  Link with href
+</a>
+<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+  Button with data-target
+</button>
+<div class="collapse" id="collapseExample">
+  <div class="well">
+    ...
+  </div>
+</div>
