--- a/views/all_reminders.html
+++ b/views/all_reminders.html
@@ -7,5 +7,6 @@
 	$(document).on("click", ".itemToggle", function(){
 		$(".collapse").collapse('hide');
 	});
+	enableEditReminder();
   </script>
 </div>
