--- a/views/category.html
+++ b/views/category.html
@@ -8,9 +8,11 @@
 				<div class="category label label-success">
 					Entertainment
 				</div>
-				<h4 class="ist-group-item-heading itemHeader">One</h4>
+
+				<h4 class="ist-group-item-heading itemHeader">One <span class="glyphicon glyphicon-edit " /></h4>
 				<p class="list-group-item-text">10/15/2016 8:52 PM</p>
 				<span class="glyphicon glyphicon-bell alarmIcon" />
+				<span class="glyphicon glyphicon-trash trashIcon" />
 			</div>
 			<div class="collapse" id="collapseExample0">
 				<div>This is a line</div>
@@ -19,5 +21,8 @@
 
 	</div>
 
+<script type="text/javascript">
+	enableEditReminder();
+</script>
 </div>
 
