--- a/views/new.html
+++ b/views/new.html
@@ -15,7 +15,7 @@
               </div>
               <div class="col-sm-6">
                 <label class="control-label required">Category</label>
-                <select id="categorySelect" class="form-control"></select>
+                <select id="categorySelect1" class="form-control"></select>
               </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
                       <div class="col-sm-6">
                         <label class="control-label required">Alert</label>
                         <div class="input-group">
-                        <input type="checkbox" id="alertOn" checked> 
+                        <input type="checkbox" id="alertOn1" checked> 
                       </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
   </div>
 
   <script>
-    loadSelectBox();
-    loadAlertSwitch();
+    loadSelectBox(1);
+    loadAlertSwitch(1);
   </script>
 </div>
