--- a/views/category.html
+++ b/views/category.html
@@ -3,22 +3,22 @@
 <div class="tableContainer" id="allReminders">
 
 	<div class="list-group" id="allRemList" >
+	
 		<a class="list-group-item itemToggle pointerCursor" data-toggle="collapse" data-target="#collapseExample0" aria-expanded="false" aria-controls="collapseExample">
-			<div>
-				<div class="category label label-success">
-					Entertainment
-				</div>
+		<!-- <span class="glyphicon glyphicon-unchecked checkBoxImg invisible"></span> -->
+		<span class="glyphicon glyphicon-ok checkBoxImg"></span>
+		
+		<div class="itemCont">
 
-				<h4 class="ist-group-item-heading itemHeader">One <span class="glyphicon glyphicon-edit " /></h4>
-				<p class="list-group-item-text">10/15/2016 8:52 PM</p>
-				<span class="glyphicon glyphicon-bell alarmIcon" />
-				<span class="glyphicon glyphicon-trash trashIcon" />
-			</div>
-			<div class="collapse" id="collapseExample0">
-				<div>This is a line</div>
-			</div>
-		</a>
+		<div class="category label label-success">Anniversary</div>
+		<h5 class="list-group-item-heading itemHeader pointerCursor" id="n_O4iSP1SASst288jt">Updated 12</h5><span class="glyphicon glyphicon-edit pointerCursor editBtn"></span><p class="list-group-item-text">10/03/2016 12:06 PM</p><span class="glyphicon glyphicon-bell alarmIcon"></span><span class="glyphicon glyphicon-trash trashIcon pointerCursor" id="t_O4iSP1SASst288jt"></span>
 
+		</div>
+
+		<div class="collapse" id="collapseExample0"><div>notes</div>
+			
+			</div>
+</a>
 	</div>
 
 <script type="text/javascript">
