--- a/css/style.css
+++ b/css/style.css
@@ -45,16 +45,16 @@ input, button, textarea,.sidebar_brand, :focus {
 }
 
 #floatingIcon {
-	bottom: 25px;
+	  bottom: 25px;
     right: 25px;
-    position: absolute;
+    position: fixed;
     cursor: pointer;
 }
 
 #closeIcon {
 	top: 15px;
     right: 15px;
-    position: absolute;
+    position: fixed;
     cursor: pointer;
 }
 
@@ -75,7 +75,6 @@ input, button, textarea,.sidebar_brand, :focus {
 /* Scroll */
 #allRemList {
     overflow: auto;
-    height: 425px;
 }
 
 .displayNone {
@@ -175,4 +174,24 @@ h5:hover + .editBtn {
 
 .itemCont {
   margin-left: 24px;
+}
+
+/* First child of reminder list */
+.list-group-item:first-child {
+  border-top-color: white !important;
+  border-top-left-radius: 0px !important;
+}
+
+ul.nav.nav-tabs li>a {
+    color: #333;
+}
+
+.nav-tabs>li>a {
+    background-color: #9dd45f;
+    border: 1px solid #9dd45f;
+    border-bottom-color: #fff;
+}
+
+.nav-tabs>li>a:hover {
+    border-bottom-color: #fff;
 }
