Added Mark Completed button

--- a/views/alertNotify.html
+++ b/views/alertNotify.html
@@ -6,8 +6,8 @@
       </div>
       <div class="modal-body" id="alertBody"></div>
       <div class="modal-footer">
-        <button id="dismissBtn" type="button" class="btn btn-default" data-dismiss="modal">Dismiss</button>
-        <button id="openBtn" type="button" class="btn btn-primary" data-dismiss="modal">Open</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" id="compConfirmation">Mark Completed</button>
+        <button id="openBtn" type="button" class="btn btn-default" data-dismiss="modal">Open</button>
         <input id="openID" type="hidden" value=""/>
       </div>
     </div>
