--- a/views/edit.html
+++ b/views/edit.html
@@ -60,6 +60,7 @@
       </form>
     </div>
     <div class="modal-footer">
+      <button id="compBtn" type="button" class="btn btn-default" data-dismiss="modal">Mark Completed</button>
       <button id="cancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
       <button id="updateBtn" type="button" class="btn btn-primary" data-dismiss="modal">Update</button>
       <input id="editID" type="hidden" value=""/>
