--- a/views/category.html
+++ b/views/category.html
@@ -8,5 +8,6 @@
 	<div class="list-group tab-pane noDrag" id="allCatList" ></div>
   <script>
   	loadAllCategories(loadColorPicker);
+    changeNewBtn();
   </script>
 </div>
