--- a/views/new.html
+++ b/views/new.html
@@ -37,7 +37,9 @@
                     </div>
                       <script type="text/javascript">
                           $(function () {
-                              $('#datetimepicker1').datetimepicker();
+                              $('#datetimepicker1').datetimepicker({
+                                format: 'Do MMM YYYY LT'
+                              });
                           });
                       </script>
                       <div class="col-sm-6">
