--- a/views/all_reminders.html
+++ b/views/all_reminders.html
@@ -1,4 +1,4 @@
-<h1>All Reminders</h1>
+<div class="headerLine">ALL REMINDERS</div>
 <div class="tableContainer" id="allReminders">
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#allRemList" aria-controls="allRemList" role="tab" data-toggle="tab">Active</a></li>
