--- a/views/settings.html
+++ b/views/settings.html
@@ -1,4 +1,4 @@
-<h3>Settings</h3>
+<div class="headerLine">SETTINGS</div>
 <div class="tableContainer paddingTop10" id="settingsDiv">
     <form>  
       <div class="col-sm-12">
