--- a/views/settings.html
+++ b/views/settings.html
@@ -1,19 +1,19 @@
 <div class="headerLine">SETTINGS</div>
 <div class="tableContainer paddingTop10" id="settingsDiv">
-    <form>  
-      <div class="col-sm-12">
+    <form class="list-group-item heightDiv">  
+      <div class="col-sm-12 settingsEntry">
         <label class="control-label required paddingTop8">Quit App on pressing Close button</label>
         <div class="input-group inlineRight noDrag">
             <input type="checkbox" id="quitCB" checked> 
         </div>
       </div>
-      <div class="col-sm-12 paddingTop8">
+      <div class="col-sm-12 paddingTop8 settingsEntry">
         <label class="control-label required paddingTop8">Launch App at Start Up</label>
         <div class="input-group inlineRight noDrag">
             <input type="checkbox" id="startCB" checked> 
         </div>
       </div>
-      <div class="col-sm-12 paddingTop8">
+      <div class="col-sm-12 paddingTop8 settingsEntry">
         <label class="control-label required paddingTop8">Bring App to focus on Alert</label>
         <div class="input-group inlineRight noDrag">
             <input type="checkbox" id="onFocusCB" checked> 
