Capitalized header tabs

--- a/views/all_reminders.html
+++ b/views/all_reminders.html
@@ -1,8 +1,8 @@
-<div class="headerLine">ALL REMINDERS</div>
+<div class="headerLine" >ALL REMINDERS</div>
 <div class="tableContainer" id="allReminders">
   <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#allRemList" aria-controls="allRemList" role="tab" data-toggle="tab">Active</a></li>
-    <li role="presentation"><a href="#compRemList" aria-controls="compRemList" role="tab" data-toggle="tab">Completed</a></li>
+    <li role="presentation" class="active"><a href="#allRemList" aria-controls="allRemList" role="tab" data-toggle="tab">ACTIVE</a></li>
+    <li role="presentation"><a href="#compRemList" aria-controls="compRemList" role="tab" data-toggle="tab">COMPLETED</a></li>
   </ul>
     <div class="tab-content">
 		<div class="list-group tab-pane active" id="allRemList" ></div>
