--- a/views/upcoming.html
+++ b/views/upcoming.html
@@ -1,8 +1,8 @@
 <div class="headerLine">UPCOMING</div>
 <div class="tableContainer">
     <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a href="#upRemList" aria-controls="allRemList" role="tab" data-toggle="tab">UpComing</a></li>
-        <li role="presentation"><a href="#overRemList" id="overDueHeader" aria-controls="compRemList" role="tab" data-toggle="tab">Overdue</a></li>
+        <li role="presentation" class="active"><a href="#upRemList" aria-controls="allRemList" role="tab" data-toggle="tab">UPCOMING</a></li>
+        <li role="presentation"><a href="#overRemList" id="overDueHeader" aria-controls="compRemList" role="tab" data-toggle="tab">OVERDUE</a></li>
     </ul>
     <div class="tab-content">
         <div class="list-group tab-pane active" id="upRemList">
